.happypack/s-1247382753
SyntaxError: Expected corresponding JSX closing tag for <input> (61:16)

[0m [90m 59 | [39m                  [33m<[39m[33mi[39m className[33m=[39m[32m"es-icon es-icon-close01 inline-block vertical-top text-12"[39m[33m>[39m[33m<[39m[33m/[39m[33mi[39m[33m>[39m
 [90m 60 | [39m                  [33m<[39m[33minput[39m type[33m=[39m[32m"hidden"[39m name[33m=[39m[32m"goals[]"[39m value[33m=[39m{item[33m.[39mlabel}[33m>[39m
[31m[1m>[22m[39m[90m 61 | [39m                [33m<[39m[33m/[39m[33ma[39m[33m>[39m
 [90m    | [39m                [31m[1m^[22m[39m
 [90m 62 | [39m              [33m<[39m[33m/[39m[33mli[39m[33m>[39m
 [90m 63 | [39m            )
 [90m 64 | [39m          })[0m

BabelLoaderError: SyntaxError: Expected corresponding JSX closing tag for <input> (61:16)

[0m [90m 59 | [39m                  [33m<[39m[33mi[39m className[33m=[39m[32m"es-icon es-icon-close01 inline-block vertical-top text-12"[39m[33m>[39m[33m<[39m[33m/[39m[33mi[39m[33m>[39m
 [90m 60 | [39m                  [33m<[39m[33minput[39m type[33m=[39m[32m"hidden"[39m name[33m=[39m[32m"goals[]"[39m value[33m=[39m{item[33m.[39mlabel}[33m>[39m
[31m[1m>[22m[39m[90m 61 | [39m                [33m<[39m[33m/[39m[33ma[39m[33m>[39m
 [90m    | [39m                [31m[1m^[22m[39m
 [90m 62 | [39m              [33m<[39m[33m/[39m[33mli[39m[33m>[39m
 [90m 63 | [39m            )
 [90m 64 | [39m          })[0m

    at transpile (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:268:5)
    at /Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyWorker.js:32:3)
    at Object.HappyForegroundThreadPool.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:345:14)
    at HappyPlugin.compileInForeground (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:320:25)
    at HappyPlugin.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:236:32)
    at Object.HappyLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyLoader.js:34:15)
    at WEBPACK_CORE_LOADER_EXECUTION (/Users/kz/projects/edusoho/node_modules/.0.6.9@webpack-core/lib/NormalModuleMixin.js:155:71)